--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 
-		<h1>Cube</h1>
+	<h1>Cube</h1>
 
 	<div class="cube-container">
 		<div class="cube show-front" id="cube">
@@ -31,6 +31,11 @@
 			<img class="bottom"  src="img/buzzwoo-logo-white.svg" alt="buzzwoo logo">
 		</div>
 	</div>
+
+	<h1>Text Hover Effect</h1>
+	<!-- https://tympanus.net/codrops/2015/05/13/inspiration-for-text-styles-and-hover-effects/ -->
+
+	<a class="text-logo" href="#" data-letters="BUZZWOO!">BUZZWOO!</a>
 
 	<script>
 		document.querySelector('#flip-card').addEventListener('click', function() {
